--- a/SGPH/Web.config
+++ b/SGPH/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+     
     <add name="sgphdbEntities" connectionString="metadata=res://*/Models.SGPH.csdl|res://*/Models.SGPH.ssdl|res://*/Models.SGPH.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;password=Precious78;Persist Security Info=True;database=sgphdb&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -38,11 +39,13 @@
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
-    <roleManager enabled="false">
+    <roleManager>
       <providers>
         <clear />
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+        <add connectionStringName="ApplicationServices" applicationName="/"
+          name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" />
+        <add applicationName="/" name="AspNetWindowsTokenRoleProvider"
+          type="System.Web.Security.WindowsTokenRoleProvider" />
       </providers>
     </roleManager>
     <pages>
