--- a/SGPH.Tests/SGPH.Tests.csproj
+++ b/SGPH.Tests/SGPH.Tests.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
@@ -50,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\FuncionariosControllerTeste.cs" />
+    <Compile Include="FalsoRepositorio\FalsoFuncionarioRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
   </ItemGroup>
